--- a/templates/index.html
+++ b/templates/index.html
@@ -6,6 +6,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Lotto Generator</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css">
+  <script>
+    if (window.history.replaceState) {
+      window.history.replaceState(null, null, window.location.href);
+    }
+  </script>
 </head>
 
 <body>
@@ -34,16 +39,41 @@
   <section class="hero is-dark is-fullheight-with-navbar">
     <div class="hero-body">
       <div class="container has-text-centered">
-        <p class="title">
-          Your random numbers:
-        </p>
-        <p class="subtitle">
-          {% if numbers %}
-          {{ numbers }}
-          {% endif %}
-        </p>
-        <a href="/" class="button is-link">More!</a>
-        <button class="button is-danger">Clear</button>
+        <div class="columns is-vcentered">
+          <div class="column">
+            <p class="title">
+              Your random numbers:
+            </p>
+
+            <p class="subtitle">
+              {% if numbers %}
+              {{ numbers }}
+              {% endif %}
+            </p>
+            <form action="/" method="get">
+              <input class="button is-link" type="submit" value="More">
+            </form>
+            
+          </div>
+          <div class="column" {% if cookies %} style="overflow-y: scroll;max-height: 60vh;" {% endif %}>
+            {% if cookies %}
+            <p class="title">
+              Old numbers:
+              {% if cookies %}
+            <form action="/" method="post">
+              <input class="button is-danger" type="submit" value="Clear">
+            </form>
+            {% endif %}
+            </p>
+            <p class="subtitle">
+              {% for cookie in cookies %}
+              {{ cookie }}
+              <br>
+              {% endfor %}
+            </p>
+            {% endif %}
+          </div>
+        </div>
       </div>
     </div>
   </section>
